--- a/code/Load.ipynb
+++ b/code/Load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "c486207a-6e78-4162-8e92-d63b8ff4e27f",
    "metadata": {},
    "outputs": [
@@ -10,29 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "╒════════════╤═══════════════════╤═══════════════════════════════════════════════════╤════════════════════╕\n",
-      "│   trans_pk │ transactiontype   │ transaction                                       │ adjustmentreason   │\n",
-      "╞════════════╪═══════════════════╪═══════════════════════════════════════════════════╪════════════════════╡\n",
-      "│      45842 │ Charge            │ ppps, initial visit                               │ Charge             │\n",
-      "├────────────┼───────────────────┼───────────────────────────────────────────────────┼────────────────────┤\n",
-      "│      45873 │ Charge            │ pr diagnostic mammography computer-aided detcj bi │ Charge             │\n",
-      "├────────────┼───────────────────┼───────────────────────────────────────────────────┼────────────────────┤\n",
-      "│      45874 │ Charge            │ Eardrum Opening                                   │ Charge             │\n",
-      "├────────────┼───────────────────┼───────────────────────────────────────────────────┼────────────────────┤\n",
-      "│      45888 │ Charge            │ e&m estb detailed/mod                             │ Charge             │\n",
-      "├────────────┼───────────────────┼───────────────────────────────────────────────────┼────────────────────┤\n",
-      "│      45889 │ Charge            │ x-ray ankle 3+ vw                                 │ Charge             │\n",
-      "├────────────┼───────────────────┼───────────────────────────────────────────────────┼────────────────────┤\n",
-      "│      45945 │ Charge            │ repair ing hernia,5+y/o,reducibl                  │ Charge             │\n",
-      "├────────────┼───────────────────┼───────────────────────────────────────────────────┼────────────────────┤\n",
-      "│      45950 │ Adjustment        │ contractual/differential w/o                      │ Contractual        │\n",
-      "├────────────┼───────────────────┼───────────────────────────────────────────────────┼────────────────────┤\n",
-      "│      45979 │ Charge            │ ct scan of abdomen contrast                       │ Charge             │\n",
-      "├────────────┼───────────────────┼───────────────────────────────────────────────────┼────────────────────┤\n",
-      "│      45986 │ Charge            │ mr angio, neck, combo                             │ Charge             │\n",
-      "├────────────┼───────────────────┼───────────────────────────────────────────────────┼────────────────────┤\n",
-      "│      45999 │ Charge            │ hosp discharge day mgmt 30 or <                   │ Charge             │\n",
-      "╘════════════╧═══════════════════╧═══════════════════════════════════════════════════╧════════════════════╛\n",
+      "╒══════════════╤═════════════╕\n",
+      "│ dimpayerpk   │ payername   │\n",
+      "╞══════════════╪═════════════╡\n",
+      "╘══════════════╧═════════════╛\n",
       "PostgreSQL connection is closed\n"
      ]
     }
@@ -54,7 +35,7 @@
     "    cursor = connection.cursor()\n",
     "\n",
     "    # Executing a SQL query\n",
-    "    table_name = \"charge\"\n",
+    "    table_name = \"payer\"\n",
     "    try:\n",
     "        cursor.execute(f\"SELECT * FROM {table_name} LIMIT 10;\")\n",
     "    except psycopg2.Error as e:\n",
